# flYJAX

./: .gitignore  README.md  pyproject.toml
analysis/: _config.yml  _toc.yml  explore.ipynb
analysis/notebooks/: explore.ipynb
analysis/notebooks/gr64f_activation/: rl_model.ipynb  summary.ipynb
analysis/notebooks/gr64f_activation/processed_data/: dfq_adv_results.pkl  dfq_dual_lr_results.pkl  dfq_dynamic_exploration_results.pkl  dfq_epsilon_softmax_results.pkl  dfq_init_results.pkl  dfq_results.pkl  dq_results.pkl  fq_results.pkl  q_results.pkl  random_results.pkl
analysis/notebooks/smp108-silencing/: rl_model.ipynb
analysis/notebooks/smp108-silencing/processed_data/: dfq_dynamic_exploration_results.pkl  dfq_results.pkl
analysis/notebooks/vuma2-silencing/: rl_model.ipynb
analysis/notebooks/vuma2-silencing/processed_data/: dfq_dynamic_exploration_results.pkl
docs/: _config.yml  _toc.yml
docs/reference/: index.md
flyjax/: __init__.py
flyjax/agent/: __init__.py  base.py  model.py
flyjax/agent/rl/: __init__.py  zoo.py
flyjax/experiment/: __init__.py  get.py
flyjax/fitting/: __init__.py  bootstrapping.py  cv.py  evaluation.py  evaluation_tools.py  hierarchical.py  joint.py  model_comparison.py  samplers.py  train.py  uncertainty.py
flyjax/simulation/: __init__.py  parse.py  simulate.py
flyjax/utils/: __init__.py  plotting.py
tests/examples/: base_model_cv.ipynb  base_model_fitting.ipynb  base_model_parallel_boots.py  base_model_parallel_cv.py  base_model_parallel_cv_heirarchical.py  base_model_parallel_cv_joint.py
utils/: build.py  update.py
