[tool.poetry]
name = "flyjax"
version = "0.1.0"
description = ""
authors = ["Rishika Mohanta <neurorishika@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10"
numpy = "^1.25.1"
pandas = "^2.0.3"
matplotlib = "^3.7.2"
jupyter = "^1.0.0"
ipython = "^8.14.0"
scipy = "^1.11.1"
scikit-learn = "^1.3.0"
argparse = "^1.4.0"
mkinit = "^1.0.0"
cryptography = "^41.0.2"
lazy-loader = "^0.3"
split-file-reader = "^0.1.4"
joblib = "^1.3.1"
tqdm = "^4.65.0"
jax = "^0.5.0"
chex = "^0.1.88"
optax = "^0.2.4"
jupyter-book = "^1.0.3"
sphinx-autoapi = "^3.6.0"
myst-nb = "^1.2.0"
seaborn = "^0.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
